--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -20,15 +20,19 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-    - name: Checkout
-      uses: actions/checkout@v2
-    - name: Publish PDF Document
-    - uses: mkrakowitzer/actions-makepdfs@master
-      if: github.ref == 'refs/heads/master'
-    - name: Upload Document
-      uses: actions/upload-artifact@v2
+    - uses: actions/checkout@v2
+    - uses: baileyjm02/markdown-to-pdf@v1
       with:
-        name: platform-architecture-docs
-        path: tmp
+        input_dir: .
+        output_dir: pdfs
+        images_dir: assets/images
+          # for example <img src="./images/file-name.png">
+        images_path: ./assets/images
+          # Default is true, can set to false to only get PDF files
+        build_html: false
+    - uses: actions/upload-artifact@v1
+      with:
+        name: docs
+        path: pdfs
 
 
