--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,38 +1,25 @@
-# This is a basic workflow to help you get started with Actions
+name: Upload Document as Artifact
 
-name: MD to PDF
+on: [push]
 
-# Controls when the action will run. Triggers the workflow on push or pull request
-# events but only for the master branch
-on:
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
+env:
+  GITHUB_TOKEN: ${{ github.token }}
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   publish:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
+    name: Publish Document
     steps:
-    # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-    - uses: actions/checkout@v2
-    - uses: baileyjm02/markdown-to-pdf@v1
-      with:
-        input_dir: .
-        output_dir: pdfs
-        images_dir: assets/images
-          # for example <img src="./images/file-name.png">
-        images_path: ./assets/images
-          # Default is true, can set to false to only get PDF files
-        build_html: false
-    - uses: actions/upload-artifact@v1
-      with:
-        name: docs
-        path: pdfs
-
-
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Publish PDF Document
+        uses: shrink/actions-document-publish@v1
+        id: publish-document
+        with:
+          sources: 'README.md'
+      - name: Upload Document
+        uses: actions/upload-artifact@v2
+        id: upload-document
+        with:
+          name: 'document.pdf'
+          path: ${{ steps.publish-document.outputs.pdf }}
